fixing the buttons and profile card alignment

--- a/assets/css/person/home.css
+++ b/assets/css/person/home.css
@@ -1,7 +1,7 @@
 
 section{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     height: 85%;
     flex-direction: column;
     align-items: center;
@@ -12,7 +12,7 @@ div.holder{
     width: 90%;
     flex-wrap: wrap;
     align-content: flex-start;
-    height: 80%;
+    height: 70%;
 }
 div.profile_card{
     display: flex;
